--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memorizer",
   "description": "memoize a getter of an object",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "author": {
     "name": "Jonathan Ong",
     "email": "me@jongleberry.com",
@@ -25,5 +25,7 @@
     "memo",
     "getter"
   ],
-  "files": ["index.js"]
+  "files": [
+    "index.js"
+  ]
 }
